[REFACTOR] Integrate follow data in ProfileService